deployment/shared/logging-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quickchat-otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quickchat-otel-collector
  template:
    metadata:
      labels:
        app: quickchat-otel-collector
    spec:
      containers:
      - name: otel-collector
        image: otel/opentelemetry-collector-contrib:0.83.0
        command:
          - "/otelcol-contrib"
          - "--config=/conf/quickchat-otel-collector-config.yaml"
        volumeMounts:
          - name: config
            mountPath: /conf
          - name: elastic-ca
            mountPath: /certs
            readOnly: true
        ports:
          - containerPort: 4317
      volumes:
        - name: config
          configMap:
            name: quickchat-otel-collector-config
            items:
              - key: quickchat-otel-collector-config.yaml
                path: quickchat-otel-collector-config.yaml
        - name: elastic-ca
          secret:
            secretName: quickchat-logging-es-http-certs-public
            items:
              - key: ca.crt
                path: ca.crt
---
apiVersion: v1
kind: Service
metadata:
  name: quickchat-otel-collector
spec:
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
  selector:
    app: quickchat-otel-collector
